# datastats-gcp-jobs-scraper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build_and_deploy.yml
utils/: config_loader.py  datastats_utils.py  gcp_utils.py  jobs_scraper.py  pg_utils.py
